--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                                                 {% render_field TopLoginForm.password placeholder="Пароль" class="form-control" %}
                                             </div>
                                             <label class="checkbox">
-                                                <input type="checkbox" value="remember-me"> Запомнить меня
+                                                <input type="checkbox" name="rememberme"> Запомнить меня
                                             </label>
                                             <button class="btn btn-danger btn-block" type="submit">Войти</button>
                                             <input type="hidden" name="next" value="{{ next }}" />
