Template for loginsignup form

--- a/systemapps/accounts/templates/loginsignup.html
+++ b/systemapps/accounts/templates/loginsignup.html
@@ -1,5 +1,85 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 
 {% block content %}
+
+    <!-- Content
+	============================================= -->
+    <section id="content">
+
+        <div class="content-wrap">
+
+            <div class="container clearfix">
+
+                <div class="accordion accordion-lg divcenter nobottommargin clearfix" style="max-width: 550px;">
+
+                    <div class="acctitle"><i class="acc-closed icon-lock3"></i><i class="acc-open icon-unlock"></i>
+                        Войти в вашу учетную запись
+                    </div>
+                    <div class="acc_content clearfix">
+                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'loginsignup' %}" method="post">
+                            {% csrf_token %}
+                            <div class="col_full">
+                                <label for="login-form-username">Имя пользователя:</label>
+                                {% render_field login_form.username class="form-control" %}
+                            </div>
+                            <div class="col_full">
+                                <label for="login-form-password">Пароль:</label>
+                                {% render_field login_form.password class="form-control" %}
+                            </div>
+                            <div class="col_full nobottommargin">
+                                <button class="button button-3d button-black nomargin" id="login-form-submit"
+                                        name="login-form-submit" value="login">Войти
+                                </button>
+                                <a href="#" class="fright">Забыли пароль?</a>
+                            </div>
+                        </form>
+                    </div>
+
+                    <div class="acctitle"><i class="acc-closed icon-user4"></i><i class="acc-open icon-ok-sign"></i>
+                        Новый пользователь? Зарегистрироваться
+                    </div>
+                    <div class="acc_content clearfix">
+                        <form id="register-form" name="register-form" class="nobottommargin" action="#" method="post">
+                            {% csrf_token %}
+                            <div class="col_full">
+                                <label for="register-form-name">Псевдоним:</label>
+                                {% render_field signup_form.username class="form-control" %}
+                            </div>
+                            <div class="col_full">
+                                <label for="register-form-username">Имя:</label>
+                                {% render_field signup_form.first_name class="form-control" %}
+                            </div>
+                            <div class="col_full">
+                                <label for="register-form-username">Фамилия:</label>
+                                {% render_field signup_form.last_name class="form-control" %}
+                            </div>
+                            <div class="col_full">
+                                <label for="register-form-email">Email:</label>
+                                {% render_field signup_form.email class="form-control" %}
+                            </div>
+                            <div class="col_full">
+                                <label for="register-form-password">Введите пароль:</label>
+                                {% render_field signup_form.password1 class="form-control" %}
+                            </div>
+                            <div class="col_full">
+                                <label for="register-form-repassword">Повторите пароль:</label>
+                                {% render_field signup_form.password2 class="form-control" %}
+                            </div>
+                            <div class="col_full nobottommargin">
+                                <button class="button button-3d button-black nomargin" id="signup-form-submit"
+                                        name="signup-form-submit" value="register">Зарегистрироваться
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section><!-- #content end -->
 
 {% endblock %}
