Fixing error in loginsignup template

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,7 @@
                                         </form>
                                     </div>
                                 </li>
+                                <li><a href="{% url 'login' %}">Регистрация</a></a></li>
                             {% endif %}
 
                         </ul>
@@ -120,22 +121,22 @@
 					<li>
 						<i class="i-plain icon-call nomargin"></i>
 						<div class="he-text">
-							Call Us
-							<span>(91) 22 54215821</span>
+							Позвонить
+							<span>+7(918)111-33-45</span>
 						</div>
 					</li>
 					<li>
 						<i class="i-plain icon-line2-envelope nomargin"></i>
 						<div class="he-text">
-							Email Us
+							Написать
 							<span>info@canvas.com</span>
 						</div>
 					</li>
 					<li>
 						<i class="i-plain icon-line-clock nomargin"></i>
 						<div class="he-text">
-							We'are Open
-							<span>Mon - Sat, 10AM to 6PM</span>
+							Мы работаем
+							<span>Пон - Пят, 10:00 - 18:00</span>
 						</div>
 					</li>
 				</ul>
