--- a/systemapps/accounts/templates/loginsignup.html
+++ b/systemapps/accounts/templates/loginsignup.html
@@ -17,7 +17,7 @@
                         Войти в вашу учетную запись
                     </div>
                     <div class="acc_content clearfix">
-                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'loginsignup' %}" method="post">
+                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'login' %}" method="post">
                             {% csrf_token %}
                             <div class="col_full">
                                 <label for="login-form-username">Имя пользователя:</label>
@@ -40,7 +40,7 @@
                         Новый пользователь? Зарегистрироваться
                     </div>
                     <div class="acc_content clearfix">
-                        <form id="register-form" name="register-form" class="nobottommargin" action="#" method="post">
+                        <form id="register-form" name="register-form" class="nobottommargin" action="{% url 'login' %}" method="post">
                             {% csrf_token %}
                             <div class="col_full">
                                 <label for="register-form-name">Псевдоним:</label>
