--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                         <ul>
                             <li><a href="{% url 'home' %}">Домой</a></li>
                             {% if user.is_authenticated %}
-                                <li><a href="{% url 'home' %}"> {{ user.username }} </a>
+                                <li><a href="{% url 'home' %}"> {{ user.get_full_name }} </a>
                                     <ul>
                                         <li><a href="#"><i class="icon-user2"></i> Мой профиль</a></li>
                                         <li><a href="{% url 'logout' %} "><i class="icon-line2-logout"></i> Выйти</a></li>
