Fighting with avatar url in template

--- a/systemapps/account/templates/mail_accountactivation.html
+++ b/systemapps/account/templates/mail_accountactivation.html
@@ -1,6 +1,10 @@
 {% autoescape off %}
 Здравствуйте {{ user.get_full_name }},
-Вы зарегистрировались на сайте {{ domain }}
-Для активации вашего личного кабинета необходимо пройти по ссылке
+Спасибо, что Вы зарегистрировались на сайте {{ domain }}
+Для активации вашего личного кабинета необходимо перейти по ссылке
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+кликнув на нее или вставив ее в адресную строку Вашего браузера.
+Данная ссылка может быть использована для входа только один раз в течении 24 часов!
+
+-- Администрация сайта {{ domain }}
 {% endautoescape %}
