--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                             {% if user.is_authenticated %}
                                 <li><a href="{% url 'home' %}"> {{ user.get_full_name }} </a>
                                     <ul>
-                                        <li><a href="#"><i class="icon-user2"></i> Мой профиль</a></li>
+                                        <li><a href="{% url 'profile' %}"><i class="icon-user2"></i> Мой профиль</a></li>
                                         <li><a href="{% url 'logout' %} "><i class="icon-line2-logout"></i> Выйти</a></li>
                                     </ul>
                                 </li>
