--- a/systemapps/account/templates/loginsignup.html
+++ b/systemapps/account/templates/loginsignup.html
@@ -12,6 +12,23 @@
 
                 <div class="accordion accordion-lg divcenter nobottommargin clearfix" style="max-width: 550px;">
 
+                    <div class="acctitle"><i class="acc-closed icon-lock3"></i><i class="acc-open icon-unlock"></i>
+                        Войти в вашу учетную запись
+                    </div>
+                    <div class="acc_content clearfix">
+                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'login' %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{ request.GET.next }}">
+                            {% include 'form.html' with form=login_form %}
+                            <div class="col_full nobottommargin">
+                                <button class="button button-3d button-black nomargin" id="login-form-submit"
+                                        name="login-form-submit" value="login">Войти
+                                </button>
+                                <a href="#" class="fright">Забыли пароль?</a>
+                            </div>
+                        </form>
+                    </div>
+
                     <div class="acctitle"><i class="acc-closed icon-user4"></i><i class="acc-open icon-ok-sign"></i>
                         Новый пользователь? Зарегистрироваться
                     </div>
@@ -23,22 +40,6 @@
                                 <button class="button button-3d button-black nomargin" id="signup-form-submit"
                                         name="signup-form-submit" value="register">Зарегистрироваться
                                 </button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="acctitle"><i class="acc-closed icon-lock3"></i><i class="acc-open icon-unlock"></i>
-                        Войти в вашу учетную запись
-                    </div>
-                    <div class="acc_content clearfix">
-                        <form id="login-form" name="login-form" class="nobottommargin" action="{% url 'login' %}" method="post">
-                            {% csrf_token %}
-                            {% include 'form.html' with form=login_form %}
-                            <div class="col_full nobottommargin">
-                                <button class="button button-3d button-black nomargin" id="login-form-submit"
-                                        name="login-form-submit" value="login">Войти
-                                </button>
-                                <a href="#" class="fright">Забыли пароль?</a>
                             </div>
                         </form>
                     </div>
