--- a/systemapps/form/templates/form.html
+++ b/systemapps/form/templates/form.html
@@ -1,5 +1,9 @@
 {% load form_tags widget_tweaks %}
 
+{% for hidden_field in form.hidden_fields %}
+  {{ hidden_field }}
+{% endfor %}
+
 {% if form.non_field_errors %}
   <div class="alert alert-danger" role="alert">
     {% for error in form.non_field_errors %}
