Updating javascript for avatar uploading

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/animate.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/hoas.css' %}" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- Document Title
     ============================================= -->
