--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -1,62 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load widget_tweaks %}
+
+{% block stylesheet %}
+    <link href="{% static 'js/cropper/cropper.min.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block javascript %}
-    <script>src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.1/cropper.js"</script>
-    <script>
-        $(function () {
-            /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
-            $("#id_file").change(function () {
-                if (this.files && this.files[0]) {
-                    var reader = new FileReader();
-                    reader.onload = function (e) {
-                        $("#image").attr("src", e.target.result);
-                        $("#modalAvatar").modal("show");
-                    }
-                    reader.readAsDataURL(this.files[0]);
-                }
-            });
-
-            /* SCRIPTS TO HANDLE THE CROPPER BOX */
-            var $image = $("#image");
-            var cropBoxData;
-            var canvasData;
-            $("#modalAvatar").on("shown.bs.modal", function () {
-                $image.cropper({
-                    viewMode: 1,
-                    aspectRatio: 1 / 1,
-                    minCropBoxWidth: 224,
-                    minCropBoxHeight: 224,
-                    ready: function () {
-                        $image.cropper("setCanvasData", canvasData);
-                        $image.cropper("setCropBoxData", cropBoxData);
-                    }
-                });
-            }).on("hidden.bs.modal", function () {
-                cropBoxData = $image.cropper("getCropBoxData");
-                canvasData = $image.cropper("getCanvasData");
-                $image.cropper("destroy");
-            });
-
-            $(".js-zoom-in").click(function () {
-                $image.cropper("zoom", 0.1);
-            });
-
-            $(".js-zoom-out").click(function () {
-                $image.cropper("zoom", -0.1);
-            });
-
-            /* SCRIPT TO COLLECT THE DATA AND POST TO THE SERVER */
-            $(".js-crop-and-upload").click(function () {
-                var cropData = $image.cropper("getData");
-                $("#id_x").val(cropData["x"]);
-                $("#id_y").val(cropData["y"]);
-                $("#id_height").val(cropData["height"]);
-                $("#id_width").val(cropData["width"]);
-                $("#formUpload").submit();
-            });
-        });
-    </script>
+    <script src="{% static 'js/cropper/cropper.min.js' %}"></script>
+    <script src="{% static 'js/avatar.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -130,7 +82,7 @@
     <!-- MODAL TO CROP THE IMAGE -->
     <div class="modal fade bs-avatarupload-modal" id="modalAvatar" tabindex="-1" role="dialog"
          aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-small">
+        <div class="modal-dialog modal-lg">
             <div class="modal-body">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -138,7 +90,9 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <img src="" id="image" style="max-width: 100%;">
+                        <div class="avatar-container">
+                            <img src="{{ user.avatar.url }}" id="avatar" style="max-width: 100%;">
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <div class="btn-group left" role="group">
@@ -149,9 +103,19 @@
                                 <i class="icon-zoom-out"></i>
                             </button>
                         </div>
+                        <form method="post" enctype="multipart/form-data" id="formUpload"
+                              style="margin-bottom: 0px;" class="container clearfix">
+                            {% csrf_token %}
+                            {{ form.x }}
+                            {{ form.y }}
+                            {{ form.width }}
+                            {{ form.height }}
+                            {{ form.avatar|add_class:"sm-form-control" }}
+                        </form>
                         <button type="button" class="button button-dark button-rounded" data-dismiss="modal">Отмена
                         </button>
-                        <button type="button" class="button button-dark button-rounded js-crop-and-upload">Установить
+                        <button type="button" class="button button-dark button-rounded js-crop-and-upload">
+                            Установить
                         </button>
                     </div>
                 </div>
